adds error handler, changes in utility and logging class

--- a/metrics.ini
+++ b/metrics.ini
@@ -5,13 +5,15 @@
 # Comments >> #
 # -------------
 #socket = [addr:port]
-#http = 127.0.0.1:8658
-socket= /app/metrics.sock
+http = 192.168.0.26:8659
+; socket= /app/metrics.sock
+; socket= metrics.sock
 chmod-socket = 777
 # Base application directory
 # chdir = /full/path
-chdir  = /app
-#chdir = /Users/mani.g/Documents/business_metrics
+; chdir  = /app
+; chdir = /Users/mani.g/Documents/business_metrics
+chdir = /home/harsh/DM/business_metrics/business_metrics
 # WSGI module and callable
 # module = [wsgi_module_name]:[application_callable_name]
 module = wsgi:dispatcher
